Perhaps this sounds better?

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: JL Minimal Resume
 
 # User settings
 username: jsleslie
-user_description: I'm a masters student of data science at UBC
+user_description: I'm a Master of Data Science student at UBC
 user_title: Student
 email: jaromeleslie@gmail.com
 # twitter_username: lorem_ipsum
